--- a/tpsit/dbfilm/src/app/index.css
+++ b/tpsit/dbfilm/src/app/index.css
@@ -25,3 +25,25 @@
   gap: 6px;
   background: #1d2126;
 }
+
+.error {
+  max-width: 500px;
+  margin: 20px auto;
+  width: 100%;
+  height: 50px;
+  color: red;
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  background: rgba(255, 0, 0, .45);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 6px;
+  border: 2px solid red;
+}
+
+h1 {
+  font-family: 'Roboto', sans-serif;
+  margin: 20px 0px 20px 0px;
+}
